--- a/index.html
+++ b/index.html
@@ -279,10 +279,7 @@
                 </li>
                 <li>
                   <i class="bx bx-chevron-right"></i>
-                  <a
-                    href="https://t4ngth00.github.io/cosmetic-checker-privacy-policy"
-                    >Privacy policy</a
-                  >
+                  <a href="privacy-policy.html">Privacy policy</a>
                 </li>
               </ul>
             </div>
