Add app-ads.txt. Update index.html

--- a/index.html
+++ b/index.html
@@ -91,13 +91,16 @@
               <a
                 href="https://play.google.com/store/apps/details?id=com.binbibong.cosmeticchecker"
                 class="download-btn"
-                ><i class="bx bxl-play-store"></i> Google Play</a
               >
+                <i class="bx bxl-play-store"></i> Google Play
+              </a>
               <a
                 href="https://apps.apple.com/us/app/cosmetic-checker/id1558299043"
                 class="download-btn"
-                ><i class="bx bxl-apple"></i> App Store</a
               >
+                <i class="bx bxl-apple"></i>
+                App Store
+              </a>
             </div>
           </div>
           <div
@@ -193,55 +196,65 @@
                   href="assets/img/gallery/gallery-1.jpg"
                   class="gallery-lightbox"
                   data-gall="gallery-carousel"
-                  ><img
+                >
+                  <img
                     src="assets/img/gallery/gallery-1.jpg"
                     class="img-fluid"
                     alt=""
-                /></a>
+                  />
+                </a>
               </div>
               <div class="swiper-slide">
                 <a
                   href="assets/img/gallery/gallery-2.jpg"
                   class="gallery-lightbox"
                   data-gall="gallery-carousel"
-                  ><img
+                >
+                  <img
                     src="assets/img/gallery/gallery-2.jpg"
                     class="img-fluid"
                     alt=""
-                /></a>
+                  />
+                </a>
               </div>
               <div class="swiper-slide">
                 <a
                   href="assets/img/gallery/gallery-3.jpg"
                   class="gallery-lightbox"
                   data-gall="gallery-carousel"
-                  ><img
+                >
+                  <img
                     src="assets/img/gallery/gallery-3.jpg"
                     class="img-fluid"
                     alt=""
-                /></a>
+                  />
+                </a>
               </div>
               <div class="swiper-slide">
                 <a
                   href="assets/img/gallery/gallery-4.jpg"
                   class="gallery-lightbox"
                   data-gall="gallery-carousel"
-                  ><img
+                >
+                  <img
                     src="assets/img/gallery/gallery-4.jpg"
                     class="img-fluid"
                     alt=""
-                /></a>
+                  />
+                </a>
               </div>
               <div class="swiper-slide">
                 <a
                   href="assets/img/gallery/gallery-5.jpg"
                   class="gallery-lightbox"
                   data-gall="gallery-carousel"
-                  ><img
+                >
+                  <img
                     src="assets/img/gallery/gallery-5.jpg"
                     class="img-fluid"
                     alt=""
-                /></a>
+                  />
+                </a>
               </div>
             </div>
             <div class="swiper-pagination"></div>
@@ -269,7 +282,8 @@
               <h4>Useful Links</h4>
               <ul>
                 <li>
-                  <i class="bx bx-chevron-right"></i> <a href="#">Home</a>
+                  <i class="bx bx-chevron-right"></i>
+                  <a href="#">Home</a>
                 </li>
                 <li>
                   <i class="bx bx-chevron-right"></i>
@@ -284,8 +298,9 @@
                 <a
                   href="https://www.facebook.com/Cosmetic-Checker-109978691182156"
                   class="facebook"
-                  ><i class="bx bxl-facebook"></i
-                ></a>
+                >
+                  <i class="bx bxl-facebook"></i>
+                </a>
               </div>
             </div>
           </div>
@@ -311,8 +326,9 @@
     <a
       href="#"
       class="back-to-top d-flex align-items-center justify-content-center"
-      ><i class="bi bi-arrow-up-short"></i
-    ></a>
+    >
+      <i class="bi bi-arrow-up-short"></i>
+    </a>
 
     <!-- Vendor JS Files -->
     <script src="assets/vendor/aos/aos.js"></script>
