--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
 
       <div class="container py-4">
         <div class="copyright">
-          &copy; Copyright <strong><span>Cosmetic Checker</span></strong
+          &copy; 2021 <strong><span>Cosmetic Checker</span></strong
           >. All Rights Reserved
         </div>
         <div class="credits">
