Update privacy policy

--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -158,8 +158,29 @@
                     >Facebook</a
                   >
                 </li>
+                <li>
+                  <a
+                    href="https://monedata.io/privacy-policy"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    >Monedata</a
+                  >
+                </li>
               </ul>
             </div>
+            <p><strong>Monedata Disclosure</strong></p>
+            <p>
+              Monedata (DATA PAYMENTS OÜ, Lasnamäe linnaosa, Lõõtsa tn 5-11, Tallinn, 11415, Estonia, info@monedata.io)
+              This app uses third-party addons that collect varied data, which may include device identifiers, location, mobile network coverage and performance, installed apps list and usage stats.
+              With the user's consent, this data will be collected and shared with those third-parties for analysis and measurement purposes. The user can change his mind at any time by changing the consent.
+              To learn more about the data collected and see the list of partners, please visit
+              <a
+                href="https://monedata.io/partners"
+                target="_blank"
+                rel="noopener noreferrer"
+                >Monedata’s Partners
+              </a> section.
+            </p>
             <p><strong>Log Data</strong></p>
             <p>
               I want to inform you that whenever you use my Service, in a case of an
