Update contact info and license

--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -273,7 +273,14 @@
             <div class="col-lg-5 col-md-6 footer-contact">
               <h3>Cosmetic Checker</h3>
               <p>
-                <strong>Phone:</strong> +358 46 968 5249<br />
+                <strong>Anh Nguyen</strong><br />
+                <strong>Phone:</strong> +358 46 660 8622<br />
+                <strong>Email:</strong> nguyenhoanganh219@gmail.com<br />
+              </p>
+              <br />
+              <p>
+                <strong>Nhan Nguyen</strong><br />
+                <strong>Phone:</strong> +358 46 660 5221<br />
                 <strong>Email:</strong> nguyenthanhnhan9516@gmail.com<br />
               </p>
             </div>
